--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/prueba-pages" # the subpath of your site, e.g. /blog/
 url: "https://antorof.github.io/prueba-pages" # the base hostname & protocol for your site
-twitter_username: jekyllrb
+twitter_username: not_exists
 github_username:  antorof
 
 # Build settings
